test/fail/init0str.min
program
    string s := 0
start
end
